# ten-in-row

./: .gitignore  Arbitro.c  CMakeLists.txt  Campeonato.h  Cliente.h  Jogador.c  Jogador.h  Jogo.h  README.md  createSixGames.sh  dockDockBuildParams.json  exportVars.sh  main  main.c  makefile  setEnvVars.sh  teninrow
application/: Game.c  Game.h  Jogo  Jogo.c  Jogo.h  g_1  game  main.c
client/: Client.c  Client.h  Cliente.c  Cliente.h  client  main.c
constants/: constants.h  main.h
core/models/: Administrador.h  Arbitro.h  Campeonato.h  Cliente.c  Cliente.h  Jogador.h  Jogo.c  Jogo.h  JogosCliente.c  JogosCliente.h
helpers/: helpers.c  helpers.h
models/Communication/: Communication.c  Communication.h
moderator/: Administrador.c  Administrador.h  Arbitro.h  Campeonato.c  Campeonato.h  Jogador.h  Moderator.c  Moderator.h  main.c  moderator
moderator/Models/Application/: Game.c  Game.h
moderator/Models/Client/: Client.c  Client.h
moderator/models/Application/: Game.c  Game.h
moderator/models/Client/: Client.c  Client.h
